# random

src/docsy/: BUILD.bazel  go.mod  go.sum  hugo.toml  package.json  remove_internal_tags.py
src/docsy/assets/js/: offline-search.js  performance.js
src/docsy/assets/redoc-assets/: config.yaml  template.hbs
src/docsy/assets/scss/: _performance.scss  _print.scss  _styles_project.scss  _variables_project.scss
src/docsy/data/cmdref/: sbomexport.md
src/docsy/data/reusables/: apifilters.yaml  deep-scan-spec-table.md  mcp-params.md
src/docsy/i18n/: en.toml
src/docsy/layouts/: robots.txt
src/docsy/layouts/docs/: baseof.html  list.html  list.print.html
src/docsy/layouts/partials/: feedback.html  footer.html  google-analytics.html  head.html  navbar.html  navigationbtns.html  page-meta-links.html  toc.html  yaml-table.html
src/docsy/layouts/partials/hooks/: body-end.html  head-end.html
src/docsy/layouts/shortcodes/: alpha-badge.html  badge.html  beta-badge.html  draft.html  faq.html  release-notes.html  symbol.html  yamltable.html  yamltablereuse.html
src/docsy/layouts/shortcodes/blocks/: feature.html  section.html
src/docsy/layouts/shortcodes/cmdref/: sbomexport.html
src/docsy/layouts/shortcodes/reusables/: deep-scan-spec-table.html  mcp-params.html
src/docsy/static/customcss/: redocStyles.scss
src/docsy/static/js/: expandable-code.js  fix-mermaid.js  print-url-fix.js  resize-navbar.js
